<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManualEntryFragment">

    <Button
        android:id="@+id/manualSearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:layout_marginStart="144dp"
        android:layout_marginBottom="196dp"
        android:background="@drawable/rounded_button"

        android:gravity="center"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/manualEntrySearchButton"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.006"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stateSpinner"
        app:layout_constraintVertical_bias="0.48"
        app:strokeColor="@color/purple_700" />

    <Spinner
        android:id="@+id/stateSpinner"
        android:layout_width="378dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="444dp"
        android:spinnerMode="dropdown"
        android:text="@string/stateSpinnerName"
        android:autofillHints="State"
        android:entries="@array/states"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.AppCompat.Spinner.Underlined" />
        <!--TODO: make spinner hint. This requires and ArrayAdapter to override getView(). -->

    <EditText
        android:id="@+id/plateSearch"
        android:layout_width="377dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="64dp"
        android:fadeScrollbars="false"
        android:hint="@string/plateNumber"
        app:layout_constraintBottom_toTopOf="@+id/stateSpinner"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="textAutoComplete"
        tools:ignore="Autofill" />

</androidx.constraintlayout.widget.ConstraintLayout>