<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScanFragment">
    <!--Manual Entry Button Layout-->

    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></androidx.camera.view.PreviewView>



    <Button
        android:id="@+id/outlinedButton"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="@string/scanManualButton"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/overlayTextView"
        android:layout_width="169dp"
        android:layout_height="110dp"
        android:gravity="center_horizontal|center_vertical"
        android:textAlignment="inherit"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/outlinedButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ResultsScanButton" />


</androidx.constraintlayout.widget.ConstraintLayout>
